force-app/main/default/objects/MailchimpSubscription__c/MailchimpSubscription__c.object-meta.xml
<CustomObject>
    <label>Mailchimp Subscription</label>
    <nameField>
        <label>Mailchimp Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mailchimp Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>