force-app/main/default/objects/MailchimpSubscription__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <referenceTo>Interest__c</referenceTo>
    <relationshipLabel>Mailchimp Subscriptions</relationshipLabel>
    <relationshipName>MailchimpSubscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>