force-app/main/default/objects/MailchimpSubscription__c/fields/Subscribed__c.field-meta.xml
<CustomField>
    <fullName>Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user is subscribed or unsubscribed to this list</description>
    <label>Subscribed</label>
    <type>Checkbox</type>
</CustomField>