force-app/main/default/objects/MailchimpSubscription__c/fields/SubscriptionKey__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionKey__c</fullName>
    <description>A combination of the Mailchimp subscriber e-mail hash and Mailchimp interest ID, used by the automatic sync process for updating subscriptions.</description>
    <externalId>true</externalId>
    <label>Subscription Key</label>
    <length>43</length>
    <type>Text</type>
</CustomField>